Fix bug on mobile adaptive on order book

--- a/src/pages/MarketsPage/components/OrderBook/OrderBook.module.scss
+++ b/src/pages/MarketsPage/components/OrderBook/OrderBook.module.scss
@@ -96,7 +96,7 @@
 
   @media screen and (max-width: 768px) {
     &.active {
-      height: calc(100vh - var(--header-height) - 220px);
+      height: calc(100vh - var(--header-height) - 210px);
     }
 
     &.visible.active {
