--- a/src/pages/MarketsPage/components/OrderBook/components/NoActiveOffers/NoActiveOffers.module.scss
+++ b/src/pages/MarketsPage/components/OrderBook/components/NoActiveOffers/NoActiveOffers.module.scss
@@ -21,7 +21,7 @@
 
     &.active {
       display: flex;
-      height: calc(100% - var(--header-height) - 78px);
+      height: calc(100% - var(--header-height) - 116px);
     }
 
     &.create.active {
